# spam_detection

./: .gitignore  Cargo.toml  README.md  model  out
migrations/20171009204300_raw_features/: up.sql
migrations/20171009224643_features/: down.sql  up.sql
model_service/: example.csv  model
model_service/service/: check_accuracy.py  model_generator.py  prediction_service.py
src/: email.rs  email_reader.rs  errors.rs  extraction.rs  feature_storage.rs  files.rs  html.rs  main.rs  model.rs  model_training_service.rs  models.rs  sentiment.rs  service.rs  spam_detection_service.rs  state.rs  text_analysis.rs
